--- a/SyncDateTime/MainWindow.xaml
+++ b/SyncDateTime/MainWindow.xaml
@@ -4,10 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ignore="http://www.ignore.com"
+        xmlns:msg="clr-namespace:SyncDateTime.Messages"
         mc:Ignorable="d ignore"
         Height="300"
-        Width="300"
-        Title="MVVM Light Application"
+        Width="535"
+        Title="Sync Datetime creation"
         DataContext="{Binding Main, Source={StaticResource Locator}}">
     
     <Window.Resources>
@@ -18,15 +19,75 @@
         </ResourceDictionary>
     </Window.Resources>
 
-    <Grid x:Name="LayoutRoot">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="30"/>
+        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="25"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="26"/>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Grid.Row="0" Text="Dossier source" HorizontalAlignment="Center" />
+            <Grid Grid.Column="0" Grid.Row="1" Margin="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="24"/>
+                </Grid.ColumnDefinitions>
+                <TextBox  Grid.Column="0" Text="{Binding SourceFolder}"/>
+                <Button Grid.Column="1" Command="{Binding SelectFolder}" CommandParameter="{x:Static msg:EnumWichFolder.Source }">
+                    <Path Data="M0,21.940001L64,21.940001 58.81641,53.042002 5.4832716,53.042002z M5.4829998,0L26.983213,0 26.983213,6.5154943 58.805,6.5154943 58.805,14.362 5.5063095,14.362 5.5063095,7.1121521 5.4829998,7.1121521z" Stretch="Uniform" Fill="#FF4485F6" Width="16" Height="16" Margin="0,0,0,0" RenderTransformOrigin="0.5,0.5"/>
+                </Button>
+            </Grid>
 
-        <TextBlock FontSize="36"
-                   FontWeight="Bold"
-                   Foreground="Purple"
-                   Text="{Binding WelcomeTitle}"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   TextWrapping="Wrap" />
+            <Button Grid.Column="1" Grid.Row="1" Margin="2" Command="{Binding SwitchFolder}">
+                <Path Data="M49.35738,18.436999L58.722004,37.954821 49.71278,34.901676C49.112577,36.085255 48.42238,37.25563 47.639778,38.398912 40.742756,48.470314 29.547432,52.696732 22.638614,47.838825 18.525202,44.948284 16.853298,39.49909 17.628001,33.440805 18.081201,36.596746 19.491405,39.269993 21.858612,40.935263 27.598125,44.970381 34.616543,42.251734 39.200954,31.343049L30.056432,28.246709z M29.428843,1.9073486E-06C31.859049,0.0013980865 34.141277,0.649189 36.084745,2.0151882 40.19425,4.9045458 41.862152,10.352341 41.091251,16.412358 40.640751,13.256149 39.235849,10.584242 36.864746,8.9175367 31.125139,4.883666 24.10693,7.5998335 19.527525,18.512664L28.665536,21.606472 9.3685818,31.419 0,11.899345 9.0040016,14.950054C9.6068621,13.76785 10.298313,12.597147 11.082213,11.455344 16.04138,4.2143917 23.218318,-0.0035648346 29.428843,1.9073486E-06z" Stretch="Uniform" Fill="#FF4485F6" Width="16" Height="16" Margin="0,0,0,0" RenderTransformOrigin="0.5,0.5">
+                    <Path.RenderTransform>
+                        <TransformGroup>
+                            <TransformGroup.Children>
+                                <RotateTransform Angle="43" />
+                                <ScaleTransform ScaleX="1" ScaleY="1" />
+                            </TransformGroup.Children>
+                        </TransformGroup>
+                    </Path.RenderTransform>
+                </Path>
+            </Button>
+        
+            <TextBlock Grid.Column="2" Grid.Row="0" Text="Dossier cible" HorizontalAlignment="Center" />
+            <Grid Grid.Column="2" Grid.Row="1" Margin="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="24"/>
+                </Grid.ColumnDefinitions>
+                <TextBox  Grid.Column="0" Text="{Binding TargetFolder}"/>
+                <Button Grid.Column="1" Command="{Binding SelectFolder}" CommandParameter="{x:Static msg:EnumWichFolder.Target }">
+                    <Path Data="M0,21.940001L64,21.940001 58.81641,53.042002 5.4832716,53.042002z M5.4829998,0L26.983213,0 26.983213,6.5154943 58.805,6.5154943 58.805,14.362 5.5063095,14.362 5.5063095,7.1121521 5.4829998,7.1121521z" Stretch="Uniform" Fill="#FF4485F6" Width="16" Height="16" Margin="0,0,0,0" RenderTransformOrigin="0.5,0.5"/>
+                </Button>
+            </Grid>
+            <!--<TextBlock FontSize="36"
+                       FontWeight="Bold"
+                       Foreground="Purple"
+                       Text="{Binding WelcomeTitle}"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Center"
+                       TextWrapping="Wrap" />-->
+        
 
+        </Grid>
+        
+        <TextBlock Grid.Row="1" Text="{Binding LogResult}" ScrollViewer.HorizontalScrollBarVisibility="Visible"/>
+        <Button Grid.Row="2" HorizontalAlignment="Right" Margin="2,0" Command="{Binding SynchFolder}">
+            <StackPanel Orientation="Horizontal">               
+                <Path Data="M44.817715,32.701C44.817715,36.424438 43.317719,39.769474 40.880226,42.212898 38.434834,44.649822 35.091141,46.147739 31.369753,46.150341 27.679762,46.150341 24.35157,44.671223 21.919287,42.2715L26.742264,37.44965 13.336,37.44965 13.336,50.854187 17.786488,46.404942C21.270859,49.861279 26.078165,52 31.369753,52 42.028622,51.998199 50.661396,43.359409 50.663998,32.701z M32.635052,12C21.97893,12.002014,13.341001,20.637493,13.341001,31.295L19.187323,31.295C19.189894,27.57238 20.68988,24.227364 23.127359,21.784601 25.567509,19.347088 28.913782,17.849091 32.635052,17.84647 36.379917,17.84647 39.757488,19.373089 42.197472,21.83989L37.58041,26.455275 50.660995,26.455275 50.660995,13.373056 46.330338,17.702539C42.838165,14.183121,37.989204,12,32.635052,12z M32,0C49.6744,0 64,14.3269 64,32 64,49.673199 49.6744,64 32,64 14.3281,64 0,49.673199 0,32 0,14.3269 14.3281,0 32,0z" Stretch="Uniform" Fill="#FF4485F6" Width="16" Height="16" Margin="0,0,0,0" RenderTransformOrigin="0.5,0.5"/>
+                <Label Content="Go"/>
+            </StackPanel>
+        </Button>
     </Grid>
 </Window>
